--- a/tictactoe.css
+++ b/tictactoe.css
@@ -27,6 +27,8 @@ h2 {
   border: none;
   border-radius: 10px;
   background-color: white;
+  color: red;
+  font-weight: 900;
   cursor: pointer;
   transition: 0.4s;
 }
