--- a/tictactoe.css
+++ b/tictactoe.css
@@ -19,6 +19,9 @@
 h2 {
   margin-top: 50px;
 }
+#playBtn {
+  color: red;
+}
 
 #playBtn,
 .changeTurnsBtn {
@@ -27,7 +30,6 @@ h2 {
   border: none;
   border-radius: 10px;
   background-color: white;
-  color: red;
   font-weight: 900;
   cursor: pointer;
   transition: 0.4s;
