--- a/style.css
+++ b/style.css
@@ -41,23 +41,25 @@
   padding: 15px 0;
 }
 
-button {
+a button {
   width: 80px;
   background-color: transparent;
   border: none;
   border-bottom: 2px solid transparent;
   transition: 0.4s;
-}
-
-button > a {
+  font-family: "Poppins", sans-serif;
   text-decoration: none;
   color: white;
   font-size: 16px;
+  cursor: pointer;
 }
 
-button:hover {
-  color: gray;
+a button:hover {
   border-bottom: 2px solid white;
+}
+
+a button:active {
+  color: black;
 }
 
 .main-section {
